plain-manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-openshift
spec:
  to:
    kind: Service
    name: hello-openshift
  port:
    targetPort: http
  tls:
    termination: edge
